[package]
name = "sleepsort-rs"
version = "0.1.0"
authors = ["Wander Lairson Costa <wander.lairson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
async-timer = "0.7.3"
futures = "0.3.5"

[dev-dependencies]
tokio = { version = "0.2.21", features = ["macros", "rt-threaded"] }
